# Scalar-

./: .dockerignore  .env.example  Dockerfile  PROJECT_STEPS.txt  README.md  __init__.py  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  support_models.py
graders/: __init__.py  common.py  task1_grader.py  task2_grader.py  task3_grader.py
models/: __init__.py  action.py  observation.py  reward.py  state.py
server/: __init__.py  app.py  environment.py
tasks/: __init__.py  catalog.py  task1_basic.py  task2_medium.py  task3_advanced.py
utils/: customer_tickets.py
