[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-smart-support-env"
version = "3.0.0"
description = "A real-world customer support OpenEnv environment with graded workflows."
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.1.0",
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "requests>=2.31.0",
  "openai>=1.60.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
server = "smart_support_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["smart_support_env", "smart_support_env.server"]
package-dir = { "smart_support_env" = ".", "smart_support_env.server" = "server" }
